force-app/main/default/objects/User/fields/Adresse_email_expedition__c.field-meta.xml
<CustomField>
    <fullName>Adresse_email_expedition__c</fullName>
    <description>Champ indiquant la valeur par défaut utilisée par ce User pour envoyer des mails depuis le Chatter du Case.</description>
    <label>Adresse email d&apos;expédition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>