force-app/main/default/objects/User/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <label>Equipe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceptation Annexes</fullName>
            </value>
            <value>
                <fullName>Acceptation Fleet Cellule Support</fullName>
            </value>
            <value>
                <fullName>Acceptation Fleet Transfert</fullName>
            </value>
            <value>
                <fullName>Acceptation Fleet VN</fullName>
            </value>
            <value>
                <fullName>Acceptation Fleet VO</fullName>
            </value>
            <value>
                <fullName>Acceptation Refinancement/transfert</fullName>
            </value>
            <value>
                <fullName>Acceptation Retail VN</fullName>
            </value>
            <value>
                <fullName>Acceptation Retail VO</fullName>
            </value>
            <value>
                <fullName>Acceptation VGRF</fullName>
            </value>
            <value>
                <fullName>Acceptation VIP</fullName>
            </value>
            <value>
                <fullName>Crédit réseau 4 fois sans frais</fullName>
            </value>
            <value>
                <fullName>Crédit réseau affacturage VN</fullName>
            </value>
            <value>
                <fullName>Crédit réseau affacturage VO</fullName>
            </value>
            <value>
                <fullName>Crédit réseau comptabilité</fullName>
            </value>
            <value>
                <fullName>Crédit réseau double financement</fullName>
            </value>
            <value>
                <fullName>Crédit réseau post traitement</fullName>
            </value>
            <value>
                <fullName>Crédit réseau RAC</fullName>
            </value>
            <value>
                <fullName>Fleet - Fins de contrat</fullName>
            </value>
            <value>
                <fullName>Fleet - Grands comptes</fullName>
            </value>
            <value>
                <fullName>Fleet - RC</fullName>
            </value>
            <value>
                <fullName>Paiement Fleet</fullName>
            </value>
            <value>
                <fullName>Paiement Grands comptes</fullName>
            </value>
            <value>
                <fullName>Paiement Manuel</fullName>
            </value>
            <value>
                <fullName>Paiement régularisation</fullName>
            </value>
            <value>
                <fullName>Paiement Retail</fullName>
            </value>
            <value>
                <fullName>Qualité DORAB divers</fullName>
            </value>
            <value>
                <fullName>Qualité DORAB réclamations</fullName>
            </value>
            <value>
                <fullName>Recouvrement - Administratif et Banque de France</fullName>
            </value>
            <value>
                <fullName>Recouvrement - Affaires Spéciales</fullName>
            </value>
            <value>
                <fullName>Recouvrement - Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>