force-app/main/default/objects/User/fields/OdigoCti__Odigo_Conf__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Odigo_Conf__c</fullName>
    <label>Odigo Conf</label>
    <length>100</length>
    <type>Text</type>
</CustomField>