force-app/main/default/objects/User/fields/OdigoCti__Odigo_login__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Odigo_login__c</fullName>
    <description>Login Odigo</description>
    <label>Odigo login</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>