force-app/main/default/objects/User/listViews/RecentrlyCreated.listView-meta.xml
<ListView>
    <fullName>RecentrlyCreated</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_BY_NAME</field>
        <operation>contains</operation>
        <value>saib</value>
    </filters>
    <label>Recently Created</label>
</ListView>